--- a/data/generic.yml
+++ b/data/generic.yml
@@ -3,5 +3,6 @@ settings:
   email: "hello@tablefortwo.org.il"
   signup_link: "https://www.10bis.co.il/TableForTwo/TableForTwoHome/TableForTwoRegistration?utm_source=table42&ref=table42"
   facebook_share: "https://www.facebook.com/sharer/sharer.php?u=https://www.tablefortwo.org.il"
+  ambassador_join: "mailto:hello@tablefortwo.org.il?subject=Join%20Table%20for%20two%20as%20Ambassador&amp;body=Hi%2C%0AI'd%20like%20to%20join%20as%20ambassador.%0APlease%20contact%20me.%0A"
 seo:
   description: תורמים שקל אחד בכל הזמנת ארוחה עם תן ביס. עוזרים לילדים שזקוקים לארוחה. הכסף במלואו הולך ישירות לילדים שזקוקים לו.
