--- a/data/ambassadors.yml
+++ b/data/ambassadors.yml
@@ -93,7 +93,7 @@ list:
   - image: "ambassador_10.png"
     name: רועי טרטמן
     link: "#"
-    title: הבעלים של RET2082, מייסד-שותף ומנהל המוצר ב
+    title: Co-founder and Head of Product
     message:
       בתור מישהו שבילה הרבה זמן בחברת משתמשי תן-ביס, אני יכול לומר בהחלט שזה מותרות נהדר לכל עובד. הדבר היפה במותרות הוא שאנחנו לא באמת צריכים אותם, ואם אנחנו כבר מקבלים אותם, למה לא ישר? מידית? במקום? להעביר את הלאה? שולחן לשניים עובד כי הוא פשוט עובד
     company: Fitfully
@@ -104,9 +104,7 @@ list:
     name: גדעון ברגר
     link: "#"
     title: Data operations Business Development
-    message: שולחן שניים היא אחת היוזמות המבורכות שראיתי בסצינת ההי טק הישראלית.
-      תוכנית שולחן לשניים מאפשר לאנשים שעסוקים בחיי היומיום וחיים בשיגרה עמוסה לתת ולתרום לנזקקים.
-      מעבר לתרומה היומיומית, המיזם מאפשר לחברים בתוכנית להתנדב ולקחת חלק בשלל פעילויות, מהרגע הראשון ששמעתי על שולחן ל2-התאהבתי ברעיון.
+    message: שולחן שניים היא אחת היוזמות המבורכות שראיתי בסצינת ההי טק הישראלית. תוכנית שולחן לשניים מאפשר לאנשים שעסוקים בחיי היומיום וחיים בשיגרה עמוסה לתת ולתרום לנזקקים.מעבר לתרומה היומיומית, המיזם מאפשר לחברים בתוכנית להתנדב ולקחת חלק בשלל פעילויות, מהרגע הראשון ששמעתי על שולחן לשניים התאהבתי ברעיון.
     company: SimilarWeb.com
     company_logo: null
     company_link: "www.SimilarWeb.com"
