--- a/data/ambassadors.yml
+++ b/data/ambassadors.yml
@@ -4,9 +4,7 @@ list:
     link: "#"
     title: מהנדס בדיקות מערכת וביצועים
     message:
-      בעיניי להיות שגרירה זה קודם כל להוות דוגמא אישית ,להראות לאנשים שאפשר וצריך לתרום לאלו ששפר מזלם - במיוחד אם אלו ילדים.
-      התוכנית היא מעולה בגלל שקל להצטרף, לא צריך להתאמץ הרבה והתוצאה עצמה היא ענקית ומשנה חיים.
-      אני מקווה שאנשים ישכילו להבין את זה ויצטרפו בהמוניהם
+      בעיניי להיות שגרירה זה קודם כל להוות דוגמא אישית ,להראות לאנשים שאפשר וצריך לתרום לאלו ששפר מזלם. התוכנית היא מעולה בגלל שקל להצטרף והתוצאה עצמה היא ענקית ומשנה חיים. אני מקווה שאנשים יצטרפו בהמוניהם
     company: חברת F5
     company_logo: "ambassador_logo_01.png"
     company_link: "https://www.linkedin.com/company/f5-networks"
@@ -104,7 +102,7 @@ list:
     name: גדעון ברגר
     link: "#"
     title: Data operations Business Development
-    message: שולחן שניים היא אחת היוזמות המבורכות שראיתי בסצינת ההי טק הישראלית. תוכנית שולחן לשניים מאפשר לאנשים שעסוקים בחיי היומיום וחיים בשיגרה עמוסה לתת ולתרום לנזקקים.מעבר לתרומה היומיומית, המיזם מאפשר לחברים בתוכנית להתנדב ולקחת חלק בשלל פעילויות, מהרגע הראשון ששמעתי על שולחן לשניים התאהבתי ברעיון.
+    message: אחת היוזמות המבורכות שראיתי בסצינת ההייטק. היוזמה מאפשרת לאנשים שעסוקים בחיי היומיום וחיים בשיגרה עמוסה לתת ולתרום לנזקקים. מהרגע הראשון ששמעתי על שולחן לשניים התאהבתי ברעיון.
     company: SimilarWeb.com
     company_logo: null
     company_link: "www.SimilarWeb.com"
